force-app/main/default/objects/DocumentVersionHistory__c/DocumentVersionHistory__c.object-meta.xml
<CustomObject>
    <label>Histórico Versiones Documento</label>
    <nameField>
        <displayFormat>DVH-{00000}</displayFormat>
        <label>Document Version History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos Versiones de Documentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>