force-app/main/default/objects/DocumentVersionHistory__c/fields/Cuadro_Superficies__c.field-meta.xml
<CustomField>
    <fullName>Cuadro_Superficies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuadro Superficies</label>
    <referenceTo>Cuadro_Superficies__c</referenceTo>
    <relationshipName>Document_Versions_History</relationshipName>
    <type>Lookup</type>
</CustomField>