force-app/main/default/objects/DocumentVersionHistory__c/fields/Director_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Director_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History4</relationshipName>
    <type>Lookup</type>
</CustomField>