force-app/main/default/objects/DocumentVersionHistory__c/fields/Director_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Director_de_Negocio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director de Negocio</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History5</relationshipName>
    <type>Lookup</type>
</CustomField>