force-app/main/default/objects/DocumentVersionHistory__c/fields/Director_Promociones__c.field-meta.xml
<CustomField>
    <fullName>Director_Promociones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Promociones</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History2</relationshipName>
    <type>Lookup</type>
</CustomField>