force-app/main/default/objects/DocumentVersionHistory__c/fields/Director_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Director_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Técnico</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History1</relationshipName>
    <type>Lookup</type>
</CustomField>