force-app/main/default/objects/DocumentVersionHistory__c/fields/Document_Version_History_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_History_Name__c</fullName>
    <label>Document Version History Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>