force-app/main/default/objects/DocumentVersionHistory__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipName>Document_Versions_History</relationshipName>
    <type>Lookup</type>
</CustomField>