force-app/main/default/objects/DocumentVersionHistory__c/fields/Rellenar_Cuadro_Sup__c.field-meta.xml
<CustomField>
    <fullName>Rellenar_Cuadro_Sup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rellenar Cuadro Sup</label>
    <type>Checkbox</type>
</CustomField>