force-app/main/default/objects/DocumentVersionHistory__c/fields/Responsable_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History3</relationshipName>
    <type>Lookup</type>
</CustomField>