force-app/main/default/objects/DocumentVersionHistory__c/fields/Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Versions_History</relationshipName>
    <type>Lookup</type>
</CustomField>