force-app/main/default/objects/DocumentVersionHistory__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Memoria_calidades</fullName>
                <label>Memoria Calidades</label>
            </value>
            <value>
                <fullName>Cuadro_superficies</fullName>
                <label>Cuadro Superficies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>